<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kenjic.dusan.chatapplication.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <EditText
            android:id="@+id/unReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/fnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <EditText
            android:id="@+id/passReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/lnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/emailReg"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_weight="2"
            android:singleLine="true"
            android:layout_marginLeft="25dp" />

        <TextView
            android:id="@+id/genderReg"
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1" />

        <Spinner
            android:entries="@array/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">
        </Spinner>

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cBoxReg"
        android:layout_marginLeft="25dp"/>


    <DatePicker
        android:id="@+id/dateReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:headerBackground="@color/colorPrimaryDark">
    </DatePicker>

    <Button
        android:id="@+id/regReg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:enabled="false"
        android:layout_marginBottom="1dp"/>

</LinearLayout>