<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kenjic.dusan.chatapplication.MainActivity">

    <EditText
        android:id="@+id/unMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:ems="12"
        android:layout_gravity="center"
        android:paddingTop="80dp"/>

    <EditText
        android:id="@+id/passMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:ems="12"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:paddingTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:text="@string/login"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="50dp"/>

        <Button
            android:enabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn"
            android:text="@string/register"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="100dp"/>

    </LinearLayout>

</LinearLayout>
