<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kenjic.dusan.chatapplication.ContactsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logged_in_user"
            android:text="@string/logged_in_as"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/signed_in_user"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:layout_toRightOf="@+id/logged_in_user"
            android:layout_centerInParent="true"
            />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/signed_in_user"
            android:layout_marginStart="90dp"
            android:layout_toEndOf="@+id/signed_in_user"
            android:text="@string/btn_rfsh" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:text="@string/logout"
            android:layout_marginLeft="175dp"/>

    </RelativeLayout>


    <ListView
        android:id="@+id/chatList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

    </ListView>


</LinearLayout>